# suptertask

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md  Vagrantfile
_builds/default/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  demo
_builds/default/Testing/Temporary/: CTestCostData.txt
_builds/default/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/default/_3rdParty/polly/: saved-arguments
_logs/polly/clang-cxx14/: log.txt
_logs/polly/default/: log-0.txt  log.txt
examples/: demo.cpp
include/: div.h  log.h
sources/: div.cpp  log.cpp
tests/: tests.cpp
